--- a/public/css/connexion.css
+++ b/public/css/connexion.css
@@ -32,6 +32,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 10px;
 }
 
 .right-panel {
@@ -66,6 +67,7 @@ input[type="password"] {
     border: 1px solid #3f4356;
     border-radius: 5px;
     color: white;
+    outline: none;
 }
 
 input::placeholder {
