--- a/public/css/comptable.css
+++ b/public/css/comptable.css
@@ -63,7 +63,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1rem;
-    margin-bottom: 2rem;
+    margin: 2rem 0;
   }
   
   /* Tableau */
@@ -143,7 +143,7 @@
   .btn-details {
     background-color: transparent;
     outline: none;
-    /* padding: 0.5rem 1rem; */
+    padding: 0;
     /* border-radius: var(--border-radius); */
     border: none;
     cursor: pointer;
