--- a/public/css/visiteur.css
+++ b/public/css/visiteur.css
@@ -13,6 +13,43 @@
     margin-bottom: 1rem;
 }
 
+.card h3 {
+    margin-bottom: 15px;
+}
+
+.card .validate {
+    display: flex;
+    margin-top: 15px;
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.card .validate button {
+    width: 98%;
+    transition-duration: 200ms;
+    color:rgb(20 24 36);
+}
+
+.card .validate button:hover {
+    width: 100%;
+    background-color: #8be796;
+}
+
+.details-btn {
+    border: none;
+    cursor: pointer;
+    font-weight: 500;
+    background-color: transparent;
+    color: var(--blue);
+    transition-duration: 200ms
+}
+.details-btn:hover {
+    background-color: transparent;
+    color: #3ba8f1;
+}
+
 .form-group {
     margin-bottom: 1rem;
 }
@@ -23,7 +60,7 @@
 }
 
 input, select {
-    width: 100%;
+    /* width: 100%; */
     padding: 0.5rem;
     border-radius: 0.25rem;
     border: none;
@@ -42,6 +79,7 @@ input, select {
 table {
     width: 100%;
     border-collapse: collapse;
+    margin: 15px 0;
 }
 
 th, td {
@@ -72,6 +110,7 @@ th, td {
     border: none;
     cursor: pointer;
     font-weight: 500;
+    background-color: var(--green);
 }
 
 .btn-red {
