--- a/public/css/home.css
+++ b/public/css/home.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: sans-serif;
     background-color: #1a1f2e;
     height: 100vh;
     display: flex;
