--- a/public/css/connexion.css
+++ b/public/css/connexion.css
@@ -59,7 +59,7 @@ h1 {
     margin-bottom: 20px;
 }
 
-input[type="email"],
+input[type="text"],
 input[type="password"] {
     width: 100%;
     padding: 12px;
