--- a/public/css/visiteur.css
+++ b/public/css/visiteur.css
@@ -173,6 +173,14 @@ th, td {
     font-size: 1.5rem;
 }
 
+li {
+    margin: 10px 15px;
+}
+
+li .btn-red {
+    width: 99px;
+}
+
 @media (max-width: 768px) {
     .side-panel {
         width: 100%;
